--- a/IOC01/pom.xml
+++ b/IOC01/pom.xml
@@ -19,6 +19,12 @@
       <artifactId>spring-context</artifactId>
       <version>6.0.6</version>
     </dependency>
+    <dependency>
+      <groupId>com.squareup.okhttp</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>2.7.5</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>IOC01</finalName>
