--- a/IOC01/pom.xml
+++ b/IOC01/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>6.0.6</version>
+            <version>6.0.9</version>
         </dependency>
         <!--spring jdbc 依赖-->
         <dependency>
@@ -49,7 +49,28 @@
             <artifactId>aspectjrt</artifactId>
             <version>1.9.19</version>
         </dependency>
+
+        <!--spring mvc相关-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>5.1.6.RELEASE</version>
+        </dependency>
+
+        <!--jsp相关配置-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>javax.servlet.jsp-api</artifactId>
+            <version>2.3.3</version>
+        </dependency>
+
     </dependencies>
+
     <build>
         <finalName>IOC01</finalName>
         <plugins>
@@ -63,4 +84,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
